minor medits overall-mel

--- a/NBH/NBH-war/web/addCustomerPhoto.xhtml
+++ b/NBH/NBH-war/web/addCustomerPhoto.xhtml
@@ -14,7 +14,7 @@
         <section class="content" style="background-image: url('https://wallpapers.com/images/hd/pastel-aesthetic-background-kk9ygsa8qygoluem.jpg'); background-size: cover; background-position: center;">
             <div class="container-fluid align-items-center justify-content-center" style="min-height: 100vh;">
                 <div class="col-sm-12 text-center">
-                    <h1 class="m-0 text-white">Add Post Photo</h1>
+                    <h1 class="m-0 text-white">Add Profile Photo</h1>
                     <div class="row">
                         <div class="col">
                             <h:form enctype="multipart/form-data">
