--- a/NBH/NBH-war/web/myExchangeListing.xhtml
+++ b/NBH/NBH-war/web/myExchangeListing.xhtml
@@ -36,16 +36,24 @@
                         <!-- Panel footer with buttons -->
                         <f:facet name="footer">
                             <div class="panel-footer">
-                                <p:commandButton action="#{exchangeListingManagedBean.navigateToEditExchangeListing(listing)}" value="Edit Listing">
+                                
+                                <p:commandButton action="#{exchangeListingManagedBean.navigateToEditExchangeListing(listing)}" value="Edit Listing" 
+                                                 update="@form:growl">
                                     <f:setPropertyActionListener value="#{listing}" target="#{exchangeListingManagedBean.currentExchangeListing}" />
-                                    <!-- sets the currentExchangeListing in ManagedBean to be this listing -->
                                 </p:commandButton>
+                                
                                 <p:commandButton value="Offers" action="#{exchangeListingManagedBean.navigateToAvailableOffers(listing)}"/>
 
                                 <h:commandButton value="Delete" action="#{exchangeListingManagedBean.deleteListing(listing)}"
                                                  onclick="return confirmDelete();" type="submit" />                                
                             </div>
                         </f:facet>
+  
+                        <p:dialog header="Edit Not Allowed" widgetVar="errorDialog" modal="true" showEffect="fade" hideEffect="fade">
+                            <h:outputText value="Editing is not allowed since there are offers made to this listing." />
+                            <p:commandButton value="OK" onclick="PF('errorDialog').hide();" type="button" />
+                        </p:dialog>
+
                     </p:panel>
                 </ui:repeat>
             </ui:fragment>
