--- a/NBH/NBH-war/web/myOffers.xhtml
+++ b/NBH/NBH-war/web/myOffers.xhtml
@@ -42,7 +42,12 @@
                                 <p:commandButton value="View Listing" action="#{offerManagedBean.navigateToViewListing(offer.id)}"/>
 
                                 <h:commandButton value="Cancel" action="#{offerManagedBean.cancelOffer(offer.id)}"
-                                                 onclick="return confirmDelete();" type="submit" />                                
+                                                 onclick="return confirmCancel();" type="submit" 
+                                                 rendered="#{offer.status ne 'CANCELLED' and offer.status ne 'DECLINED'}"/>
+
+                                <h:commandButton value="Remove" action="#{offerManagedBean.deleteOffer(offer.id)}"
+                                                 onclick="return confirmDelete();" type="submit" 
+                                                 rendered="#{offer.status eq 'CANCELLED' or offer.status eq 'DECLINED'}"/>                   
                             </div>
                         </f:facet>
                     </p:panel>
@@ -64,9 +69,14 @@
     <ui:define name="script">
 
         <script type="text/javascript">
-            function confirmDelete() {
-                return confirm('Are you sure you want to delete this listing?');
+            function confirmCancel() {
+                return confirm('Are you sure you want to cancel your offer?');
             }
+            
+            function confirmDelete() {
+                return confirm('Are you sure you want to remove this offer? You will not be able to view this offer after it is removed.');
+            }
+
         </script>
     </ui:define>
 
