--- a/NBH/NBH-war/web/timeExchange.xhtml
+++ b/NBH/NBH-war/web/timeExchange.xhtml
@@ -65,7 +65,7 @@
         </div>
         -->
 
-        <p:dataGrid id="event"  value="#{exchangeListingManagedBean.allListings}" var="listing" columns="3" layout="grid"
+        <p:dataGrid id="event"  value="#{exchangeListingManagedBean.activeListings}" var="listing" columns="3" layout="grid"
                     rows="3" paginator="true" 
                     paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                     >
