--- a/NBH/NBH-war/web/addOffer.xhtml
+++ b/NBH/NBH-war/web/addOffer.xhtml
@@ -2,7 +2,7 @@
 <!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-                template="./layout/customerTemplate.xhtml"
+                template="./layout/default2.xhtml"
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:f="http://xmlns.jcp.org/jsf/core"
                 xmlns:p="http://primefaces.org/ui">
@@ -23,9 +23,9 @@
                 padding: 0;
                 box-sizing: border-box;
             }
-            body {
+            /*body {
                 font-family: "Inter", sans-serif;
-            }
+            }*/
             .formbold-mb-5 {
                 margin-bottom: 20px;
             }
@@ -164,7 +164,7 @@
                     <div>
                         <h:commandButton value="Submit" 
                                          action="#{offerManagedBean.submit}" 
-                                         styleClass="formbold-btn"
+                                         styleClass="site-btn"
                                          />
                     </div>
 
