--- a/NBH/NBH-war/web/addSkill.xhtml
+++ b/NBH/NBH-war/web/addSkill.xhtml
@@ -14,7 +14,7 @@
 
     <ui:define name="content">
         <style type="text/css">
-            
+
             .skills-container {
                 display: grid;
                 grid-template-columns: repeat(3, 1fr); /* Adjust number of columns as needed */
@@ -39,19 +39,36 @@
             }
         </style>
 
-        <h:form id="skillsForm">
-            <p:growl id="growl" showDetail="true" sticky="true" /> 
-            <div class="skills-container">
-                <ui:repeat value="#{skillManagedBean.skills}" var="skill">
-                    <h:commandButton styleClass="skill #{skillManagedBean.selectedSkillIds.contains(skill.id) ? 'selected' : ''}" 
-                                   action="#{skillManagedBean.toggleSkillSelection(skill.id)}"
-                                   value="#{skill.skillName}">
-                        <f:ajax render="@form" />
-                    </h:commandButton>
-                </ui:repeat>
+        <section class="breadcrumb-section set-bg" data-setbg="https://wallpapers.com/images/hd/pastel-aesthetic-background-kk9ygsa8qygoluem.jpg">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 text-center">
+                        <div class="breadcrumb__text">
+                            <h2>My Skills</h2>
+                            <div class="breadcrumb__option">
+                                <span>Select the skills that you can exchange with your neighbours.</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <h:commandButton value="Submit" action="#{skillManagedBean.submit}" />
-        </h:form>
+        </section>
+
+        <div style="padding:2em" class="text-center">
+            <h:form id="skillsForm">
+                <p:growl id="growl" showDetail="true" sticky="true" /> 
+                <div class="skills-container">
+                    <ui:repeat value="#{skillManagedBean.skills}" var="skill">
+                        <h:commandButton styleClass="skill #{skillManagedBean.selectedSkillIds.contains(skill.id) ? 'selected' : ''}" 
+                                         action="#{skillManagedBean.toggleSkillSelection(skill.id)}"
+                                         value="#{skill.skillName}">
+                            <f:ajax render="@form" />
+                        </h:commandButton>
+                    </ui:repeat>
+                </div>
+                <h:commandButton value="Submit" action="#{skillManagedBean.submit}" class="site-btn"/>
+            </h:form>    
+        </div>
 
     </ui:define>
 
