--- a/NBH/NBH-war/web/myOffers.xhtml
+++ b/NBH/NBH-war/web/myOffers.xhtml
@@ -18,46 +18,94 @@
     </ui:define>
 
     <ui:define name="content">
-        My Offers made:
-        <h:form id="form" class="content-class">
-            <p:growl id="growl" sticky="true" showDetail="true"/>
-
-            <ui:fragment rendered="#{not empty offerManagedBean.offersMade}">
-                <ui:repeat value="#{offerManagedBean.offersMade}" var="offer">
-                    <p:panel header="Targeted Skill: #{offerManagedBean.getSkillsForOffer(offer.id)}" toggleable="true" closable="true" style="margin-bottom:20px;" >
-                        <h:outputText value="Status: #{offer.status}" /><br/> 
-
-                        Submitted at: <h:outputText value="#{offer.postedDateTime}" >
-                            <f:convertDateTime pattern="EEEE, MMMM d, HH:mm yyyy" timeZone="Asia/Singapore" />
-                        </h:outputText><br/>
-                        <br/>
-                        For Listing: <h:outputText value="#{offerManagedBean.getTitleOfListing(offer.id)}"></h:outputText>
-                        <br/>
-                        Your description: <h:outputText value="#{offer.description}"></h:outputText>
-
-                        <!-- Panel footer with buttons -->
-                        <f:facet name="footer">
-                            <div class="panel-footer">
-
-                                <p:commandButton value="View Listing" action="#{offerManagedBean.navigateToViewListing(offer.id)}"/>
-
-                                <h:commandButton value="Cancel" action="#{offerManagedBean.cancelOffer(offer.id)}"
-                                                 onclick="return confirmDelete();" type="submit" />                                
+        <section class="breadcrumb-section set-bg" data-setbg="https://wallpapers.com/images/hd/pastel-aesthetic-background-kk9ygsa8qygoluem.jpg">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 text-center">
+                        <div class="breadcrumb__text">
+                            <h2>My Offers Made</h2>
+                            <div class="breadcrumb__option">
+                                <span>These are the offers you have made to your neighbours.</span>
                             </div>
-                        </f:facet>
-                    </p:panel>
-                </ui:repeat>
-            </ui:fragment>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
+        <!-- Blog Section Begin -->
+        <ui:fragment rendered="#{not empty offerManagedBean.offersMade}">
+
+            <h:form id="form" class="content-class">
+                <section class="blog spad" style="padding:3em">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-12 col-md-12">
+                                <div class="row">
+                                    <ui:repeat value="#{offerManagedBean.offersMade}" var="offer">
+                                        <div class="col-lg-4 col-md-4 col-sm-4">
+                                            <div class="blog__item" style="border: 2px solid gainsboro; padding:2em">
+                                                <div class="blog__item__text text-center">
+                                                    <h5><a href="#">Status: #{offer.status}</a></h5>
+                                                    <p>
+                                                        Targeted Skill: #{offerManagedBean.getSkillsForOffer(offer.id)}
+                                                    </p>
+                                                    <p>
+                                                        For: #{offerManagedBean.getTitleOfListing(offer.id)}
+                                                    </p>
+                                                    <p>
+                                                        Your Description: #{offer.description}
+                                                    </p>
+                                                    <p> 
+                                                        Submitted: 
+                                                        <h:outputText value="#{offer.postedDateTime}" >
+                                                            <f:convertDateTime pattern="EEEE, MMMM d yyyy" timeZone="Asia/Singapore" />
+                                                        </h:outputText>
+                                                    </p>
+                                                    <p:commandButton value="Details" class="blog__btn" icon="pi pi-angle-double-right" 
+                                                                     style="border-color: #cccccc; background-color: #ffffff" 
+                                                                     action="#{offerManagedBean.navigateToViewListing(offer.id)}" 
+                                                                     >
+                                                        <!-- <p:commandLink update=":form:eventDetail" oncomplete="PF('eventDialog').show()" title="View Detail"> -->                           
+                                                        <f:setPropertyActionListener value="#{listing}" target="#{exchangeListingManagedBean.currentExchangeListing}" />
+                                                    </p:commandButton>
+                                                    &nbsp;
+                                                    <h:commandButton value="Cancel" class="blog__btn"
+                                                                     style="border-color: #cccccc; background-color: #cccccc; color: #666666" 
+                                                                     action="#{offerManagedBean.cancelOffer(offer.id)}" 
+                                                                     onclick="return confirmDelete();" type="submit" >
+                                                    </h:commandButton>
+
+                                                </div>
+                                            </div>
+                                        </div>    
+                                    </ui:repeat>
+
+                                    <div class="col-lg-12">
+                                        <div class="product__pagination blog__pagination">
+                                            <a href="#">1</a>
+                                            <a href="#">2</a>
+                                            <a href="#">3</a>
+                                            <a href="#"><i class="fa fa-long-arrow-right"></i></a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </h:form>
+        </ui:fragment>
+        <!-- Blog Section End -->
+
+        <h:form id="form1" class="content-class">
+            <p:growl id="growl" sticky="true" showDetail="true"/>
             <ui:fragment rendered="#{empty offerManagedBean.offersMade}">
-                <p:panel header="No offers made currently">
-                    <h:outputText value="There are no listings"/>
-                </p:panel>
-
-                <h:commandButton value="Make Offer" action="timeExchange.xhtml?faces-redirect=true" />          
+                <div class='text-center' style="padding:2em">
+                    <h3>You have not made any offers yet.</h3><br/>
+                    <h:commandButton class="site-btn" value="Make Offer" action="timeExchange.xhtml?faces-redirect=true" />          
+                </div>
             </ui:fragment>
-
-
         </h:form>
     </ui:define>
 
