resolve merge conflicts

--- a/NBH/NBH-war/web/myExchangeListing.xhtml
+++ b/NBH/NBH-war/web/myExchangeListing.xhtml
@@ -33,48 +33,8 @@
 
         <h:form id="form" class="content-class">
             <p:growl id="growl" sticky="true" showDetail="true"/>
-
             <ui:fragment rendered="#{not empty exchangeListingManagedBean.allListings}">
-                <ui:repeat value="#{exchangeListingManagedBean.allListings}" var="listing">
-                    <p:panel header="#{listing.title}" toggleable="true" closable="true" style="margin-bottom:20px;" >
-                        <h:outputText value="Status: #{listing.status}" /><br/>
-                        Start: <h:outputText value="#{listing.startDateTime}" >
-                            <f:convertDateTime pattern="EEEE, MMMM d, HH:mm yyyy" timeZone="Asia/Singapore" />
-                        </h:outputText><br/>
-                        End: <h:outputText value="#{listing.endDateTime}" >
-                            <f:convertDateTime pattern="EEEE, MMMM d, HH:mm yyyy" timeZone="Asia/Singapore" />
-                        </h:outputText><br/>
-                        <br/>
-                        <!-- Additional event details here -->
 
-                        <!-- Panel footer with buttons -->
-                        <f:facet name="footer">
-                            <div class="panel-footer">
-                                
-                                <p:commandButton action="#{exchangeListingManagedBean.navigateToEditExchangeListing(listing)}" value="Edit Listing" 
-                                                 update="@form:growl">
-                                    <f:setPropertyActionListener value="#{listing}" target="#{exchangeListingManagedBean.currentExchangeListing}" />
-                                </p:commandButton>
-                                
-                                <p:commandButton value="Offers" action="#{exchangeListingManagedBean.navigateToAvailableOffers(listing)}"/>
-
-                                <h:commandButton value="Delete" action="#{exchangeListingManagedBean.deleteListing(listing)}"
-                                                 onclick="return confirmDelete();" type="submit" />                                
-                            </div>
-                        </f:facet>
-  
-                        <p:dialog header="Edit Not Allowed" widgetVar="errorDialog" modal="true" showEffect="fade" hideEffect="fade">
-                            <h:outputText value="Editing is not allowed since there are offers made to this listing." />
-                            <p:commandButton value="OK" onclick="PF('errorDialog').hide();" type="button" />
-                        </p:dialog>
-
-                    </p:panel>
-                </ui:repeat>
-            </ui:fragment>
-
-        <ui:fragment rendered="#{not empty exchangeListingManagedBean.allListings}">
-
-            <h:form id="form" class="content-class">
                 <section class="blog spad" style="padding:3em">
                     <div class="container">
                         <div class="row">
@@ -85,6 +45,7 @@
                                             <div class="blog__item" style="border: 2px solid gainsboro; padding:2em">
                                                 <div class="blog__item__text text-center">
                                                     <h5><a href="#">Status: #{listing.status}</a></h5>
+                                                    <p>#{listing.title}</p>
                                                     <p> 
                                                         Date: 
                                                         <h:outputText value="#{listing.startDateTime}" >
@@ -103,7 +64,7 @@
                                                     <p:commandButton value="Edit" class="blog__btn" icon="pi pi-angle-double-right" 
                                                                      style="border-color: #cccccc; background-color: #ffffff; color: #666666" 
                                                                      action="#{exchangeListingManagedBean.navigateToEditExchangeListing(listing)}" 
-                                                                     >
+                                                                     update="@form:growl">
                                                         <!-- <p:commandLink update=":form:eventDetail" oncomplete="PF('eventDialog').show()" title="View Detail"> -->                           
                                                         <f:setPropertyActionListener value="#{listing}" target="#{exchangeListingManagedBean.currentExchangeListing}" />
                                                     </p:commandButton>
@@ -115,6 +76,11 @@
                                                                      style="border-color: #cccccc; background-color: #cccccc; color: #666666"
                                                                      action="#{exchangeListingManagedBean.deleteListing(listing)}"
                                                                      onclick="return confirmDelete();" type="submit" />
+
+                                                    <p:dialog header="Edit Not Allowed" widgetVar="errorDialog" modal="true" showEffect="fade" hideEffect="fade">
+                                                        <h:outputText value="Editing is not allowed since there are offers made to this listing." />
+                                                        <p:commandButton value="OK" onclick="PF('errorDialog').hide();" type="button" />
+                                                    </p:dialog>
                                                 </div>
                                             </div>
                                         </div>    
@@ -133,12 +99,9 @@
                         </div>
                     </div>
                 </section>
-            </h:form>
-        </ui:fragment>
-        <!-- Blog Section End -->
+            </ui:fragment>
+            <!-- Blog Section End -->
 
-        <h:form id="form1" class="content-class">
-            <p:growl id="growl" sticky="true" showDetail="true"/>
             <ui:fragment rendered="#{empty exchangeListingManagedBean.allListings}">
                 <div class='text-center' style="padding:2em">
                     <h3>You have not created any service exchange requests.</h3>            
